# opm_v2

./: .copier-answers.yml  .gitignore  LICENSE  OPM_20250210.cfg  OPM_20250210_DPS.cfg  OPM_20250218.cfg  OPM_20250304.cfg  OPM_20250312.cfg  OPM_demo.cfg  README.md  opm_config.json  opm_config_20250216.json  opm_config_20250218.json  opm_config_20250228.json  opm_config_20250304.json  opm_config_20250304_dev.json  opm_config_20250312.json  pyproject.toml  test_setting.yaml  test_stage_events.yaml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
src/opm_v2/: __init__.py  _main.py  _main_dev.py  _opm_app.py  _opm_app_dev.py  _opm_app_old.py  _update_config_widget.py  mm_stuff.txt  test.text
src/opm_v2/engine/: OPMEngine.py  opm_custom_actions.py  opm_engine.py  opm_engine_dev.py  qi2labOPMEngine.py  setup_events.py  setup_events_dev.py
src/opm_v2/handlers/: OPMMirrorHandler.py  opm_mirror_handler.py
src/opm_v2/hardware/: AOMirror.py  APump.py  ElveFlow.py  HamiltonMVP.py  OPMNIDAQ.py  PicardShutter.py
src/opm_v2/utils/: autofocus_remote_unit.py  elveflow_control.py  opm_custom_actions.py  sensorless_ao.py
tests/: load_test_acquisition.py  test_fluidics.py
